--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,7 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "ember-simple-auth": "0.8.0",
-    "hammerjs": "~2.0.4",
-    "material-design-icons": "~2.0.0"
+    "hammerjs": "~2.0.4"
   },
   "resolutions": {
     "ember": "~1.13.0",
