--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "ember-simple-auth": "0.8.0",
-    "hammerjs": "~2.0.4"
+    "hammerjs": "~2.0.4",
+    "bootstrap": "~3.3.5"
   },
   "resolutions": {
     "ember": "~1.13.0",
