--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "ember-paper": "0.2.2",
     "ember-parse-adapter": "0.5.3",
     "ember-simple-auth-parse": "0.0.5"
+  },
+  "dependencies": {
+    "gmaps": "^0.4.18"
   }
 }
