--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
+    "ember-braintree": "0.1.0",
     "ember-cli": "1.13.1",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
@@ -29,9 +30,11 @@
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-paypal": "0.0.3",
     "ember-cli-qunit": "0.3.13",
     "ember-cli-sass": "4.0.1",
     "ember-cli-simple-auth": "^0.8.0",
+    "ember-cli-stripe": "^0.3.0",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
@@ -41,7 +44,7 @@
     "ember-simple-auth-parse": "0.0.5"
   },
   "dependencies": {
-    "ember-stripe-service": "^3.0.0",
+    "ember-stripe-service": "^3.1.2",
     "gmaps": "^0.4.18"
   }
 }
